[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/messages/image_lightbox.gd" id="1"]

[node name="ImageLightbox" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.85)
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ImageRect" type="TextureRect" parent="CenterContainer/VBox"]
layout_mode = 2
stretch_mode = 5
expand_mode = 1

[node name="ButtonRow" type="HBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="CloseButton" type="Button" parent="CenterContainer/VBox/ButtonRow"]
layout_mode = 2
text = "Close"
